changes for 640 added